refactor(handlers): add Data Transfer Objects to handlers
